[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"
authors = ["Patrik Dvořáček <patrik@dvoracek.dev>"]

[dependencies]
itertools = "0.14.0"
num-integer = "0.1.46"

[lints.clippy]
pedantic = "deny"
complexity = "deny"
style = "deny"
correctness = "deny"
suspicious = "deny"
unwrap_used = "deny"
